<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="20dp">

            <TextView
                android:id="@+id/textAssuredDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_life_assured_details"
                android:textAllCaps="true"
                android:textColor="@color/colorSkyBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!--<TextView
                android:id="@+id/textLifeAssured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAssuredDetails"
                android:paddingTop="10dp"
                android:text="@string/text_name_of_life_assured"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />-->

            <LinearLayout
                android:id="@+id/lifeAssuredLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAssuredDetails"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <EditText
                        android:id="@+id/editFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/editLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/dobLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lifeAssuredLayout"
                android:paddingTop="10dp">

                <!--<TextView
                    android:id="@+id/textDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/text_dob"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <EditText
                        android:id="@+id/editDatePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:drawableRight="@android:drawable/ic_menu_my_calendar"
                        android:hint="@string/hint_date_format" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/genderLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dobLayout"
                android:gravity="center"
                android:paddingTop="10dp">

                <!--<LinearLayout
                    android:id="@+id/headerGenderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:text="@string/text_gender"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/textSmoking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:text="@string/text_smoking"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/selectGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="GENDER"
                        android:layout_marginRight="5dp"
                        app:met_floatingLabel="highlight"
                        app:theme="@style/AppSpinnerTheme" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/selectSmoking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:hint="SMOKING"
                        app:met_floatingLabel="highlight"
                        app:theme="@style/AppSpinnerTheme" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutProposerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genderLayout"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textProposerDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/header_proposer_details"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSameAsAbove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/text_same_as_above"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textSameAsAbove"
                    android:layout_marginEnd="28dp"
                    android:layout_marginRight="28dp"
                    android:gravity="center_horizontal"
                    android:textOff="NO"
                    android:textOn="YES"
                    android:checked="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/textOtherDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutProposerDetails"
                android:layout_marginTop="20dp"
                android:text="@string/header_other_details"
                android:textAllCaps="true"
                android:textColor="@color/colorSkyBlue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/headerOtherLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textOtherDetails"
                android:paddingTop="10dp">

                <!--<TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />-->

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_type_email"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <!--<TextView
                    android:id="@+id/textMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mailLayout"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_mobile"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mobileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mailLayout">

                    <EditText
                        android:id="@+id/editMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_type_mobile"
                        android:imeOptions="actionDone"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textBranchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mobileLayout"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_branch_location"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/selectState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textBranchLocation"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_select_state"
                    app:met_floatingLabel="highlight"
                    app:theme="@style/AppSpinnerTheme" />


                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/selectCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/selectState"
                    android:hint="@string/hint_select_city"
                    app:met_floatingLabel="highlight"
                    app:theme="@style/AppSpinnerTheme" />


                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/selectBranch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/selectCity"
                    android:hint="@string/hint_select_branch"
                    app:met_floatingLabel="highlight"
                    app:theme="@style/AppSpinnerTheme" />

            </RelativeLayout>

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headerOtherLayout"
                android:background="@drawable/rounded_next"
                android:onClick="onClick"
                android:text="NEXT"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>