<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vasudevr.bi_sud.ui.view.MainActivity">

    <LinearLayout
        android:id="@+id/layoutChildPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textChildPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_header_child_endowment_plan"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_header_product_name"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/expandableBasicInformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutChildPlan"
        android:drawableRight="@mipmap/pencil"
        android:onClick="basicInformationButton"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/header_basic_information"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/expandableBasicInformation"
        android:background="@color/colorSkyBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableBasicInformationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator1"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <include
            layout="@layout/fragment_basic_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <TextView
        android:id="@+id/expandableProductInformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableBasicInformationLayout"
        android:drawableRight="@mipmap/pencil"
        android:onClick="productInformationButton"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/header_product_information"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/expandableProductInformation"
        android:background="@color/colorSkyBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableProductInformationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator2"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <include
            layout="@layout/fragment_product_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <TextView
        android:id="@+id/expandableRiders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableProductInformationLayout"
        android:drawableRight="@mipmap/pencil"
        android:onClick="ridersButton"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/header_riders"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/expandableRiders"
        android:background="@color/colorSkyBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableRidersLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator3"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <include
            layout="@layout/fragment_basic_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

    <TextView
        android:id="@+id/expandableSummary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expandableRidersLayout"
        android:drawableRight="@mipmap/pencil"
        android:onClick="summaryButton"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/header_summary"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/expandableSummary"
        android:background="@color/colorSkyBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableSummaryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/separator4"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="bounce"
        app:ael_orientation="vertical">

        <include
            layout="@layout/fragment_basic_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


</RelativeLayout>